add HUD base layout and styles

--- a/app/index.html
+++ b/app/index.html
@@ -15,6 +15,7 @@
         <link rel="stylesheet" href="styles/bootstrap.css">
         <link rel="stylesheet" href="styles/main.css">
         <!-- endbuild -->
+				<link href='http://fonts.googleapis.com/css?family=Orbitron:400,700,500' rel='stylesheet' type='text/css'>
 </head>
   <body ng-app="everythingIsOnFireApp">
     <!--[if lt IE 7]>
